--- a/index.css
+++ b/index.css
@@ -1,85 +1,3 @@
-.header {
-  display: flex;
-  justify-content:space-between ;
-  border: 1px solid black;
-}
-
-.logo{
-  width: 200px;
-} 
-
-.nav-items{
-  padding:20px;
-}
-
-.nav-items>ul{
-  font-size: 25px;
-  display: flex;
-  padding: 0px 30px;
-  list-style-type: none;
-
-}
-
-.nav-items > ul >li {
-  padding:10px;
-  margin: 10px;
-}
- 
-.res-container{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.res-card{
-  margin: 5px;
-  width: 200px;
-  padding: 5px ;
-}
-
-.res-card:hover{
-  border: 1px solid black;
-  transition: 0.3s ease-in-out;
-  cursor: pointer;
-}
-
-/* .res-card>img{
-  display: flex;
-  width: 150px;
-  height:200px;
-  padding: 5px 10px;
-  justify-content:space-between;
-
-} */
-
-.search{
-  padding: 10px;
-}
-
-.res-logo{
-  width: 100%;  
-  height: 130px;
-}  
-
-.filter-btn{
-  margin: 10px;
-  cursor: pointer;
-}
-
-
-.shimmer-container{
-  display: flex;
-  flex-wrap: wrap;
-}
-   
-.shimmer-card{
-  padding: 20px;
-  width: 200px;
-  height:400px;
-  background-color:#f0f0f0;
-}
-
-
-.login{
-  padding: 0 20px;
-  cursor: pointer;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
